tests/seal/seal.exp
Error -------------------------------------------------------- obj_annot.js:4:18

Cannot get `param.id` because property `id` is missing in object type.

Error: obj_annot.js:4
  4:     return param.id;
                      ^^ Cannot get `param.id` because property `id` is missing in object type [1].
  References:
    3: function foo(param: { name: string; }): number {
                           ^^^^^^^^^^^^^^^^^ [1]: object type


Found 1 error
